--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "miniprogram-qrcode",
   "version": "1.0.0",
   "description": "生成小程序码辅助工具。",
-  "main": "index.js",
+  "main": "core/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Jon-Millent/miniprogram-qrcode/issues"
   },
-  "homepage": "https://github.com/Jon-Millent/miniprogram-qrcode#readme"
+  "homepage": "https://github.com/Jon-Millent/miniprogram-qrcode#readme",
+  "dependencies": {
+    "anger-wechat": "^1.0.2",
+    "request": "^2.88.0",
+    "sharp": "^0.21.0"
+  }
 }
